# caliptra-mcu-sw

./: .gitignore  .gitmodules  Cargo.toml  README.md  otp-prod-fe.vmem  rust-toolchain.toml
builder/: Cargo.toml
builder/src/: all.rs  apps.rs  caliptra.rs  firmware.rs  flash_image.rs  lib.rs  rom.rs  runtime.rs
common/testing/: Cargo.toml
common/testing/src/: i3c.rs  i3c_socket.rs  i3c_socket_server.rs  lib.rs  mctp_transport.rs
common/testing/src/mctp_util/: base_protocol.rs  common.rs  ctrl_protocol.rs
emulator/app/: Cargo.toml
emulator/app/mcu-mbox/: Cargo.toml
emulator/app/mcu-mbox/src/: lib.rs  mcu_mailbox_transport.rs
emulator/app/src/: dis.rs  dis_test.rs  doe_mbox_fsm.rs  elf.rs  emulator.rs  i3c_socket.rs  lib.rs  main.rs  mctp_transport.rs  tbf.rs
emulator/app/src/gdb/: gdb_state.rs  gdb_target.rs
emulator/app/src/tests/: doe_discovery.rs  doe_transport_loopback.rs  doe_user_loopback.rs  emulator_mcu_mailbox_test.rs  mctp_ctrl_cmd.rs  mctp_loopback.rs  mctp_user_loopback.rs  mod.rs  pldm_fw_update_test.rs  pldm_request_response_test.rs  spdm_validator.rs
emulator/bmc/pldm-fw-pkg/: Cargo.toml
emulator/bmc/pldm-fw-pkg/examples/: manifest.toml
emulator/bmc/pldm-fw-pkg/src/: lib.rs  main.rs  manifest.rs
emulator/bmc/pldm-fw-pkg/tests/: test_decode.rs  test_encode.rs
emulator/bmc/pldm-ua/: Cargo.toml
emulator/bmc/pldm-ua/src/: daemon.rs  discovery_sm.rs  events.rs  lib.rs  timer.rs  transport.rs  update_sm.rs
emulator/bmc/pldm-ua/tests/: common.rs  mock_transport.rs  test_device_identifier.rs  test_discovery.rs  test_download.rs  test_get_fw_parameters.rs  test_pass_component_table.rs  test_post_download.rs  test_request_update.rs  test_update_component.rs
emulator/caliptra/: Cargo.toml
emulator/caliptra/src/: caliptra.rs  lib.rs
emulator/cbinding/: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml  cfi_stubs.c  emulator.c
emulator/cbinding/src/: lib.rs  simple_test.rs
emulator/compliance-test/: Cargo.toml
emulator/compliance-test/dut-plugin/: config.ini
emulator/compliance-test/dut-plugin/env/: link.ld
emulator/compliance-test/dut-plugin/sail_cSim/: __init__.py  riscof_sail_cSim.py
emulator/compliance-test/dut-plugin/spike/: riscof_spike.py  spike_isa.yaml
emulator/compliance-test/src/: fs.rs  main.rs  test_data.rs
emulator/cpu/: Cargo.toml
emulator/cpu/src/: cpu.rs  csr_file.rs  internal_timers.rs  lib.rs  pic.rs  types.rs  xreg_file.rs
emulator/cpu/src/instr/: auipc.rs  bit.rs  branch.rs  compression.rs  fence.rs  jal.rs  jalr.rs  load.rs  lui.rs  mod.rs  op.rs  op_imm.rs  store.rs  system.rs  test_macros.rs
emulator/derive/: Cargo.toml
emulator/derive/src/: bus.rs
emulator/derive/tests/: derive_bus_test.rs
emulator/periph/: Cargo.toml
emulator/periph/src/: axicdma.rs  caliptra_to_ext_bus.rs  dma_ctrl.rs  doe_mbox.rs  emu_ctrl.rs  flash_ctrl.rs  i3c.rs  i3c_protocol.rs  lc_ctrl.rs  lib.rs  mci.rs  mcu_mbox0.rs  otp.rs  otp_digest.rs  reset_reason.rs  root_bus.rs  spi_flash.rs  spi_host.rs  uart.rs
hw/model/: Cargo.toml
hw/model/src/: bus_logger.rs  bus_logger_mcu.rs  debug_unlock.rs  fpga_regs.rs  jtag.rs  lcc.rs  lib.rs  lifecycle_controller.rs  mcu_mgr.rs  model_emulated.rs  model_fpga_realtime.rs  otp_provision.rs  vmem.rs
hw/model/src/xi3c/: controller.rs
hw/model/test-fw/: Cargo.toml  build.rs  hitless_update_flow.rs  mailbox_responder.rs
registers/generated-emulator/: Cargo.toml
registers/generated-emulator/src/: I3CCSR.rs  axicdma.rs  dma.rs  doe_mbox.rs  el2_pic.rs  entropy_src.rs  flash.rs  i3c.rs  lc.rs  lib.rs  main_flash.rs  mbox.rs  mci.rs  otp.rs  primary_flash.rs  recovery_flash.rs  root_bus.rs  secondary_flash.rs  sha512_acc.rs  soc.rs  spi_host.rs  uart.rs
rom/: Cargo.toml  build.rs  layout.ld  rust-toolchain.toml
rom/src/: boot_status.rs  cold_boot.rs  fuses.rs  fw_boot.rs  fw_hitless_update.rs  i3c.rs  image_verifier.rs  io.rs  lib.rs  main.rs  recovery.rs  riscv.rs  rom.rs  rom_env.rs  start.s  warm_boot.rs
rom/src/flash/: flash_partition.rs  hil.rs  mod.rs
romtime/: Cargo.toml
romtime/src/: error.rs  lib.rs  mci.rs  soc_manager.rs  static_ref.rs
runtime/: Cargo.toml  build.rs  kernel_layout.ld  layout.ld  rust-toolchain.toml
runtime/apps/: build.rs
runtime/apps/api/: Cargo.toml
runtime/apps/api/src/: image_loading.rs  lib.rs  mailbox.rs
runtime/apps/api/tests/: image_loading_test.rs
runtime/apps/apis/: Cargo.toml
runtime/apps/example/: Cargo.toml  build.rs
runtime/apps/libtock/: Cargo.toml
runtime/apps/libtockasync/: Cargo.toml
runtime/apps/pldm/: Cargo.toml
runtime/apps/syscall/: Cargo.toml
runtime/capsules/: Cargo.toml
runtime/capsules/src/: flash_partition.rs  lib.rs  mailbox.rs
runtime/dma/: Cargo.toml
runtime/dma/src/: hil.rs  lib.rs
runtime/flash/: Cargo.toml
runtime/flash/src/: flash_ctrl.rs  hil.rs
runtime/i3c/: Cargo.toml
runtime/i3c/src/: core.rs  hil.rs  lib.rs
runtime/kernel/capsules/: Cargo.toml
runtime/kernel/components/: Cargo.toml
runtime/kernel/veer/: Cargo.toml
runtime/mailbox/: Cargo.toml
runtime/src/: board.rs  chip.rs  flash_ctrl.rs  flash_ctrl_test.rs  io.rs  main.rs  pic.rs  tests.rs  timers.rs
runtime/src/components/: flash_partition.rs  mailbox.rs  mctp_driver.rs  mctp_mux.rs  mock_mctp.rs  mod.rs
runtime/src/tests/: flash_ctrl_test.rs  flash_storage_test.rs  i3c_target_test.rs  mctp_test.rs  mod.rs
runtime/userspace/libtock/: Cargo.toml  README.md
runtime/userspace/libtockasync/: Cargo.toml
runtime/userspace/syscall/: Cargo.toml
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs  test_firmware_update.rs  test_jtag_taps.rs  test_mctp_capsule_loopback.rs  test_pldm_fw_update.rs  test_soc_boot.rs
xtask/: Cargo.toml  build.rs
xtask/src/: apps_build.rs  auth_manifest.rs  cargo_lock.rs  clippy.rs  deps.rs  docs.rs  emulator_cbinding.rs  flash_image.rs  format.rs  fpga.rs  header.rs  main.rs  pldm_fw_pkg.rs  precheckin.rs  registers.rs  rom.rs  runtime.rs  runtime_build.rs  tbf.rs  test.rs
xtask/src/fpga/: configurations.rs  mod.rs  utils.rs
(+576 files in other folders)
