# Licensed under the Apache-2.0 license

[workspace]
members = [
    "builder",
    "common/pldm",
    "emulator/app",
    "emulator/bmc/pldm-ua",
    "emulator/bmc/pldm-fw-pkg",
    "emulator/bus",
    "emulator/caliptra",
    "emulator/compliance-test",
    "emulator/consts",
    "emulator/cpu",
    "emulator/derive",
    "emulator/periph",
    "registers/generated-emulator",
    "registers/generated-firmware",
    "registers/generator",
    "registers/systemrdl",
    "registers/systemrdl-new",
    "platforms/emulator/rom",
    "platforms/emulator/runtime",
    "platforms/emulator/kernel/capsules",
    "platforms/emulator/kernel/drivers/dma",
    "platforms/emulator/runtime/userspace/apps/image-loader",
    "rom",
    "romtime",
    "runtime/kernel/capsules",
    "runtime/kernel/drivers/i3c",
    "runtime/userspace/api/caliptra-api",
    "runtime/userspace/api/pldm-lib",
    "runtime/userspace/api/spdm-lib",
    "runtime/userspace/apps/example",
    "runtime/userspace/apps/spdm",
    "runtime/userspace/libtock/apis/interface/console",
    "runtime/userspace/libtock/apis/kernel/low_level_debug",
    "runtime/userspace/libtock/apis/peripherals/alarm",
    "runtime/userspace/libtock/apis/peripherals/rng",
    "runtime/userspace/libtock/panic_handlers/debug_panic",
    "runtime/userspace/libtock/panic_handlers/small_panic",
    "runtime/userspace/libtock/platform",
    # "runtime/userspace/libtock/runner",
    "runtime/userspace/libtock/runtime",
    "runtime/userspace/libtock/syscalls_tests",
    # "runtime/userspace/libtock/tools/print_sizes",
    "runtime/userspace/libtock/ufmt",
    "runtime/userspace/libtock/unittest",
    "runtime/userspace/libtockasync",
    "runtime/userspace/syscall",
    "tests/hello",
    "tests/integration",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Caliptra contributors"]

[workspace.dependencies]
anyhow = "1.0.97"
async-trait = "0.1.87"
bitfield = "0.14.0"
bit-vec = "0.6.3"
chrono = {version = "0.4.38", features = ["serde"]}
clap = { version = "4.5.23", features = [
    "cargo",
    "derive",
    "env",
    "string",
    "unicode",
    "wrap_help",
] }
crc = "3.2.1"
crc32fast = "1.4.2"
critical-section = "1.1.2"
crossterm = "0.28.1"
ctrlc = "3.4.5"
elf = "0.7.4"
ecdsa = { version = "0.16.9", features = ["pem"]}
embassy-executor = { version = "0.6.3", features = ["nightly"] }
embassy-sync = "0.6.2"
embedded-alloc = "0.5.1"
embedded-hal = "1.0"
futures = "0.3.31"
gdbstub = "0.6.3"
gdbstub_arch = "0.2.4"
getrandom = "0.2"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.26"
num_enum = "0.7.2"
num-derive = "0.4.2"
num-traits = "0.2"
portable-atomic = "1.7.0"
p384 = "0.13.0"
prettyplease = "0.2.31"
proc-macro2 = "1.0.66"
quote = "1.0"
rand = "0.8.5"
same-file = "1"
semver = "1.0.23"
sec1 = { version = "0.7.3" }
serde = { version = "1.0.209", features = ["alloc", "derive", "serde_derive"] }
serde_json = { version = "1.0.127", features = ["alloc"] }
serde-hjson = "1.1.0"
sha2 = { version = "0.10.8", default-features = false }
simple_logger = "5.0.0"
smlang = "0.8.0"
sudo = "0.6.0"
strum = "0.24"
strum_macros = "0.24"
tempfile = "3.14.0"
toml = "0.8.19"
uuid = { version = "1.10.0", features = ["serde"]}
walkdir = "2.5.0"
winnow = "0.7.4"
zerocopy = { version = "0.8.17", features = ["derive"] }
zeroize = { version = "1.6.0", default-features = false, features = ["zeroize_derive"] }

# local dependencies
capsules-emulator = { path = "platforms/emulator/kernel/capsules" }
capsules-runtime = { path = "runtime/kernel/capsules" }
dma-driver = { path = "platforms/emulator/kernel/drivers/dma" }
emulator-bmc = { path = "emulator/bmc" }
emulator-bus = { path = "emulator/bus" }
emulator-caliptra = { "path" = "emulator/caliptra" }
emulator-consts = { "path" = "emulator/consts" }
emulator-cpu = { path = "emulator/cpu" }
emulator-derive = { path = "emulator/derive" }
emulator-periph = { path = "emulator/periph" }
emulator-registers-generated = { path = "registers/generated-emulator" }
flash-driver = { path = "runtime/kernel/drivers/flash" }
i3c-driver = { path = "runtime/kernel/drivers/i3c" }
libtockasync = { path = "runtime/userspace/libtockasync" }
mcu-builder = { path = "builder" }
mcu-rom-common = { path = "rom" }
pldm-common = { path = "common/pldm"}
pldm-fw-pkg = { path = "emulator/bmc/pldm-fw-pkg" }
pldm-ua = { path = "emulator/bmc/pldm-ua"}


registers-generated = { path = "registers/generated-firmware" }
registers-generator = { path = "registers/generator" }
registers-systemrdl = { path = "registers/systemrdl" }
registers-systemrdl-new = { path = "registers/systemrdl-new" }
romtime = { path = "romtime" }

# App related dependencies
pldm-lib = { path = "runtime/userspace/api/pldm-lib", features = ["pldm-lib-use-static-config"] }
spdm-lib = { path = "runtime/userspace/api/spdm-lib" }
libsyscall-caliptra = { path = "runtime/userspace/syscall" }
libapi-caliptra = { path = "runtime/userspace/api/caliptra-api" }

# libtock dependencies
libtock = { path = "runtime/userspace/libtock" }
libtock_alarm = { path = "runtime/userspace/libtock/apis/peripherals/alarm" }
libtock_console = { path = "runtime/userspace/libtock/apis/interface/console" }
libtock_debug_panic = { path = "runtime/userspace/libtock/panic_handlers/debug_panic" }
libtock_low_level_debug = { path = "runtime/userspace/libtock/apis/kernel/low_level_debug" }
libtock_platform = { path = "runtime/userspace/libtock/platform" }
libtock_rng = { path = "runtime/userspace/libtock/apis/peripherals/rng" }
libtock_runtime = { path = "runtime/userspace/libtock/runtime" }
libtock_small_panic = { path = "runtime/userspace/libtock/panic_handlers/small_panic" }
libtock_unittest = { path = "runtime/userspace/libtock/unittest" }


# caliptra dependencies; keep git revs in sync
caliptra-api = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "2c0c6a81f569e72622001fab3732a21a1be4c78a" }
caliptra-api-types = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "2c0c6a81f569e72622001fab3732a21a1be4c78a" }
caliptra-auth-man-gen = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "2c0c6a81f569e72622001fab3732a21a1be4c78a" }
caliptra-auth-man-types = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "2c0c6a81f569e72622001fab3732a21a1be4c78a" }
caliptra-builder = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "2c0c6a81f569e72622001fab3732a21a1be4c78a" }
caliptra-emu-bus = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "2c0c6a81f569e72622001fab3732a21a1be4c78a" }
caliptra-emu-cpu = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "2c0c6a81f569e72622001fab3732a21a1be4c78a" }
caliptra-emu-periph = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "2c0c6a81f569e72622001fab3732a21a1be4c78a" }
caliptra-emu-types = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "2c0c6a81f569e72622001fab3732a21a1be4c78a" }
caliptra-error = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "2c0c6a81f569e72622001fab3732a21a1be4c78a", default-features = false }
caliptra-hw-model = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "2c0c6a81f569e72622001fab3732a21a1be4c78a" }
caliptra-image-crypto = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "2c0c6a81f569e72622001fab3732a21a1be4c78a", default-features = false, features = ["rustcrypto"] }
caliptra-image-fake-keys = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "2c0c6a81f569e72622001fab3732a21a1be4c78a" }
caliptra-image-gen = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "2c0c6a81f569e72622001fab3732a21a1be4c78a" }
caliptra-image-types = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "2c0c6a81f569e72622001fab3732a21a1be4c78a" }
caliptra-registers = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "2c0c6a81f569e72622001fab3732a21a1be4c78a" }
caliptra-test = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "2c0c6a81f569e72622001fab3732a21a1be4c78a" }
ureg = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "2c0c6a81f569e72622001fab3732a21a1be4c78a" }

# local caliptra dependency; useful when developing
# caliptra-api = { path = "../caliptra-sw/api" }
# caliptra-api-types = { path = "../caliptra-sw/api/types" }
# caliptra-auth-man-gen = { path = "../caliptra-sw/auth-manifest/gen", default-features = false }
# caliptra-auth-man-types = { path = "../caliptra-sw/auth-manifest/types", default-features = false }
# caliptra-builder = { path = "../caliptra-sw/builder" }
# caliptra-emu-bus = { path = "../caliptra-sw/sw-emulator/lib/bus" }
# caliptra-emu-cpu = { path = "../caliptra-sw/sw-emulator/lib/cpu" }
# caliptra-emu-periph = { path = "../caliptra-sw/sw-emulator/lib/periph" }
# caliptra-emu-types = { path = "../caliptra-sw/sw-emulator/lib/types" }
# caliptra-error = { path = "../caliptra-sw/error", default-features = false }
# caliptra-hw-model = { path = "../caliptra-sw/hw-model" }
# caliptra-image-crypto = { path = "../caliptra-sw/image/crypto", default-features = false, features = ["rustcrypto"] }
# caliptra-image-fake-keys = { path = "../caliptra-sw/image/fake-keys" }
# caliptra-image-gen = { path = "../caliptra-sw/image/gen" }
# caliptra-image-types = { path = "../caliptra-sw/image/types" }
# caliptra-registers = { path = "../caliptra-sw/registers" }
# caliptra-test = { path = "../caliptra-sw/test" }
# ureg = { path = "../caliptra-sw/ureg" }

# tock dependencies; keep git revs in sync
capsules-core = { git = "https://github.com/tock/tock.git", rev = "b128ae817b86706c8c4e39d27fae5c54b98659f1" }
capsules-extra = { git = "https://github.com/tock/tock.git", rev = "b128ae817b86706c8c4e39d27fae5c54b98659f1" }
capsules-system = { git = "https://github.com/tock/tock.git", rev = "b128ae817b86706c8c4e39d27fae5c54b98659f1" }
components = { git = "https://github.com/tock/tock.git", rev = "b128ae817b86706c8c4e39d27fae5c54b98659f1" }
kernel = { git = "https://github.com/tock/tock.git", rev = "b128ae817b86706c8c4e39d27fae5c54b98659f1", features = ["debug_load_processes"]}
riscv = { git = "https://github.com/tock/tock.git", rev = "b128ae817b86706c8c4e39d27fae5c54b98659f1" }
riscv-csr = { git = "https://github.com/tock/tock.git", rev = "b128ae817b86706c8c4e39d27fae5c54b98659f1" }
rv32i = { git = "https://github.com/tock/tock.git", rev = "b128ae817b86706c8c4e39d27fae5c54b98659f1" }
tock-registers = { git = "https://github.com/tock/tock.git", rev = "b128ae817b86706c8c4e39d27fae5c54b98659f1" }


# Always optimize the emulator during tests, as it is a major bottleneck for
# test speed.
[profile.test.package.emulator-bus]
opt-level = 3
[profile.test.package.emulator-cpu]
opt-level = 3
[profile.test.package.emulator-periph]
opt-level = 3
[profile.test.package.tock-registers]
opt-level = 3

[profile.release]
debug = true      # Keep debug symbols in the release ELF so that we can debug more easily.
lto = true
opt-level = "s"
codegen-units = 1
