# Licensed under the Apache-2.0 license

[workspace]
members = [
    "builder",
    "common/config",
    "common/flash-image",
    "common/mcu-mbox",
    "common/pldm",
    "common/poll",
    "common/testing",
    "emulator/app",
    "emulator/app/mcu-mbox",
    "emulator/bmc/pldm-ua",
    "emulator/bmc/pldm-fw-pkg",
    "emulator/caliptra",
    "emulator/cbinding",
    "emulator/compliance-test",
    "emulator/consts",
    "emulator/periph",
    "error",
    "hw/model",
    "hw/model/test-fw",
    "registers/generated-emulator",
    "registers/generated-firmware",
    "registers/generator",
    "registers/systemrdl",
    "registers/systemrdl-new",
    "platforms/common",
    "platforms/emulator/config",
    "platforms/emulator/mcu-image-header",
    "platforms/emulator/rom",
    "platforms/emulator/runtime",
    "platforms/emulator/runtime/kernel/capsules",
    "platforms/emulator/runtime/kernel/drivers/dma",
    "platforms/emulator/runtime/kernel/drivers/doe_mbox",
    "platforms/emulator/runtime/kernel/drivers/mcu_mbox",
    "platforms/emulator/runtime/userspace/api/caliptra-api",
    "platforms/emulator/runtime/userspace/apps/example",
    "platforms/emulator/runtime/userspace/apps/user",
    "platforms/fpga/config",
    "platforms/fpga/rom",
    "platforms/fpga/runtime",
    "platforms/test_harness",
    "rom",
    "romtime",
    "runtime/kernel/capsules",
    "runtime/kernel/components",
    "runtime/kernel/drivers/i3c",
    "runtime/kernel/drivers/doe",
    "runtime/kernel/drivers/mcu_mbox",
    "runtime/kernel/veer",
    "runtime/userspace/api/caliptra-api",
    "runtime/userspace/api/eat",
    "runtime/userspace/api/external-cmds-common",
    "runtime/userspace/api/mcu-mbox-lib",
    "runtime/userspace/api/pldm-lib",
    "runtime/userspace/api/spdm-lib",
    "runtime/userspace/libtock/apis/interface/console",
    "runtime/userspace/libtock/apis/kernel/low_level_debug",
    "runtime/userspace/libtock/apis/peripherals/alarm",
    "runtime/userspace/libtock/apis/peripherals/rng",
    "runtime/userspace/libtock/panic_handlers/debug_panic",
    "runtime/userspace/libtock/panic_handlers/small_panic",
    "runtime/userspace/libtock/platform",
    # "runtime/userspace/libtock/runner",
    "runtime/userspace/libtock/runtime",
    "runtime/userspace/libtock/syscalls_tests",
    # "runtime/userspace/libtock/tools/print_sizes",
    "runtime/userspace/libtock/ufmt",
    "runtime/userspace/libtock/unittest",
    "runtime/userspace/libtockasync",
    "runtime/userspace/syscall",
    "tests/hello",
    "tests/integration",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Caliptra contributors"]

[workspace.dependencies]
anyhow = "1.0.97"
arrayvec = { version = "0.7.4", default-features = false }
async-trait = "0.1.87"
bitfield = "0.14.0"
bitflags = "2.4.0"
bit-vec = "0.6.3"
cargo_metadata = "0.20.0"
cbindgen = "0.24"
cc = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.23", features = [
    "cargo",
    "derive",
    "env",
    "string",
    "unicode",
    "wrap_help",
] }
clap-num = "1.2.0"
constant_time_eq = { version = "0.4.2", default-features = false }
crc = "3.2.1"
crc32fast = "1.4.2"
critical-section = "1.1.2"
crossterm = "0.28.1"
ctrlc = "3.4.5"
elf = "0.7.4"
ecdsa = { version = "0.16.9", features = ["pem"]}
embassy-executor = "0.9.1"
embassy-sync = "0.6.2"
embedded-alloc = "0.5.1"
embedded-hal = "1.0"
fips204 = "0.4.6"
futures = "0.3.31"
gdbstub = "0.6.3"
gdbstub_arch = "0.2.4"
getrandom = "0.2"
hex = "0.4.3"
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4.26"
nix = "0.26.2"
num_enum = "0.7.2"
num-derive = "0.4.2"
num-traits = "0.2"
openssl = { version = "0.10", features = ["vendored"] }
pkcs8 = "0.10.2"
portable-atomic = "1.7.0"
p384 = "0.13.0"
prettyplease = "0.2.31"
proc-macro2 = "1.0.66"
quote = "1.0"
rand = "0.8.5"
same-file = "1"
semver = "1.0.23"
sec1 = { version = "0.7.3" }
serde = { version = "1.0.209", features = ["alloc", "derive", "serde_derive"] }
serde_json = { version = "1.0.127", features = ["alloc"] }
serde-hjson = "1.1.0"
sha2 = { version = "0.10.8", default-features = false }
sha3 = "0.10.8"
simple_logger = "5.0.0"
smlang = "0.8.0"
subst = "0.3.8"
sudo = "0.6.0"
strum = "0.24"
strum_macros = "0.24"
tempfile = "3.14.0"
thiserror = "2"
toml = "0.8.19"
uio = "0.4.0"
uuid = { version = "1.10.0", features = ["serde"]}
walkdir = "2.5.0"
winnow = "0.7.4"
zerocopy = { version = "0.8.17", features = ["derive"] }
zeroize = { version = "1.6.0", default-features = false, features = ["zeroize_derive"] }
zip = { version = "4.3.0", default-features = false, features = ["chrono", "deflate"] }

# local dependencies
capsules-emulator = { path = "platforms/emulator/runtime/kernel/capsules" }
capsules-runtime = { path = "runtime/kernel/capsules" }
dma-driver = { path = "platforms/emulator/runtime/kernel/drivers/dma" }
doe-mbox-driver = { path = "platforms/emulator/runtime/kernel/drivers/doe_mbox" }
doe-transport = { path = "runtime/kernel/drivers/doe"}
emulator = { path = "emulator/app" }
emulator-bmc = { path = "emulator/bmc" }
emulator-caliptra = { "path" = "emulator/caliptra" }
emulator-consts = { "path" = "emulator/consts" }
emulator-mcu-mbox = { path = "emulator/app/mcu-mbox"}
emulator-periph = { path = "emulator/periph" }
emulator-registers-generated = { path = "registers/generated-emulator" }
flash-driver = { path = "platforms/emulator/runtime/kernel/drivers/flash" }
flash-image = { path = "common/flash-image" }
i3c-driver = { path = "runtime/kernel/drivers/i3c" }
libtockasync = { path = "runtime/userspace/libtockasync" }
mcu-builder = { path = "builder" }
mcu-components = { path = "runtime/kernel/components" }
mcu-config = { path = "common/config" }
mcu-config-emulator = { path = "platforms/emulator/config" }
mcu-config-fpga = { path = "platforms/fpga/config" }
mcu-error = { path = "error" }
mcu-hw-model = { path = "hw/model" }
mcu-hw-model-test-fw = { path = "hw/model/test-fw" }
mcu-image-header = { path = "platforms/emulator/mcu-image-header" }
mcu-mbox-comm = { path = "runtime/kernel/drivers/mcu_mbox" }
mcu-mbox-common = { path = "common/mcu-mbox" }
mcu-mbox-driver = { path = "platforms/emulator/runtime/kernel/drivers/mcu_mbox" }
mcu-platforms-common = { path = "platforms/common" }
mcu-rom-common = { path = "rom" }
mcu-test-harness = {path = "platforms/test_harness"}
mcu-testing-common = { path = "common/testing" }
mcu-tock-veer = { path = "runtime/kernel/veer" }
pldm-common = { path = "common/pldm"}
pldm-fw-pkg = { path = "emulator/bmc/pldm-fw-pkg" }
pldm-ua = { path = "emulator/bmc/pldm-ua"}
poll-common = { path = "common/poll"}
registers-generated = { path = "registers/generated-firmware" }
registers-generator = { path = "registers/generator" }
registers-systemrdl = { path = "registers/systemrdl" }
registers-systemrdl-new = { path = "registers/systemrdl-new" }
romtime = { path = "romtime" }

# App related dependencies
external-cmds-common = { path = "runtime/userspace/api/external-cmds-common" }
mcu-mbox-lib = { path = "runtime/userspace/api/mcu-mbox-lib" }
pldm-lib = { path = "runtime/userspace/api/pldm-lib" }
spdm-lib = { path = "runtime/userspace/api/spdm-lib" }
libsyscall-caliptra = { path = "runtime/userspace/syscall" }
libapi-caliptra = { path = "runtime/userspace/api/caliptra-api" }
libapi-emulated-caliptra = { path = "platforms/emulator/runtime/userspace/api/caliptra-api" }

# libtock dependencies
libtock = { path = "runtime/userspace/libtock" }
libtock_alarm = { path = "runtime/userspace/libtock/apis/peripherals/alarm" }
libtock_console = { path = "runtime/userspace/libtock/apis/interface/console" }
libtock_debug_panic = { path = "runtime/userspace/libtock/panic_handlers/debug_panic" }
libtock_low_level_debug = { path = "runtime/userspace/libtock/apis/kernel/low_level_debug" }
libtock_platform = { path = "runtime/userspace/libtock/platform" }
libtock_rng = { path = "runtime/userspace/libtock/apis/peripherals/rng" }
libtock_runtime = { path = "runtime/userspace/libtock/runtime" }
libtock_small_panic = { path = "runtime/userspace/libtock/panic_handlers/small_panic" }
libtock_unittest = { path = "runtime/userspace/libtock/unittest" }

# caliptra dependencies; keep git revs in sync
caliptra-api = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "d8fac60b2cd922d3a634a03b07874090ddadd2fc" }
caliptra-api-types = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "d8fac60b2cd922d3a634a03b07874090ddadd2fc" }
caliptra-auth-man-gen = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "d8fac60b2cd922d3a634a03b07874090ddadd2fc" }
caliptra-auth-man-types = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "d8fac60b2cd922d3a634a03b07874090ddadd2fc" }
caliptra-builder = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "d8fac60b2cd922d3a634a03b07874090ddadd2fc" }
caliptra-drivers = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "d8fac60b2cd922d3a634a03b07874090ddadd2fc" }
caliptra-emu-bus = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "d8fac60b2cd922d3a634a03b07874090ddadd2fc" }
caliptra-emu-cpu = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "d8fac60b2cd922d3a634a03b07874090ddadd2fc" }
caliptra-emu-derive = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "d8fac60b2cd922d3a634a03b07874090ddadd2fc" }
caliptra-emu-periph = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "d8fac60b2cd922d3a634a03b07874090ddadd2fc" }
caliptra-emu-types = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "d8fac60b2cd922d3a634a03b07874090ddadd2fc" }
caliptra-error = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "d8fac60b2cd922d3a634a03b07874090ddadd2fc", default-features = false }
caliptra-hw-model = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "d8fac60b2cd922d3a634a03b07874090ddadd2fc" }
caliptra-hw-model-types = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "d8fac60b2cd922d3a634a03b07874090ddadd2fc" }
caliptra-image-crypto = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "d8fac60b2cd922d3a634a03b07874090ddadd2fc", default-features = false, features = ["rustcrypto"] }
caliptra-image-fake-keys = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "d8fac60b2cd922d3a634a03b07874090ddadd2fc" }
caliptra-image-gen = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "d8fac60b2cd922d3a634a03b07874090ddadd2fc" }
caliptra-image-types = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "d8fac60b2cd922d3a634a03b07874090ddadd2fc" }
caliptra-registers = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "d8fac60b2cd922d3a634a03b07874090ddadd2fc" }
caliptra-test = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "d8fac60b2cd922d3a634a03b07874090ddadd2fc" }
caliptra-test-harness = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "d8fac60b2cd922d3a634a03b07874090ddadd2fc" }
caliptra-test-harness-types = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "d8fac60b2cd922d3a634a03b07874090ddadd2fc" }
ureg = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "d8fac60b2cd922d3a634a03b07874090ddadd2fc" }
dpe = { git = "https://github.com/chipsalliance/caliptra-sw", rev = "d8fac60b2cd922d3a634a03b07874090ddadd2fc", default-features = false, features = ["dpe_profile_p384_sha384"] }

# local caliptra dependency; useful when developing
# caliptra-api = { path = "../caliptra-sw/api" }
# caliptra-api-types = { path = "../caliptra-sw/api/types" }
# caliptra-auth-man-gen = { path = "../caliptra-sw/auth-manifest/gen", default-features = false }
# caliptra-auth-man-types = { path = "../caliptra-sw/auth-manifest/types", default-features = false }
# caliptra-builder = { path = "../caliptra-sw/builder" }
# caliptra-drivers = { path = "../caliptra-sw/drivers" }
# caliptra-emu-bus = { path = "../caliptra-sw/sw-emulator/lib/bus" }
# caliptra-emu-cpu = { path = "../caliptra-sw/sw-emulator/lib/cpu" }
# caliptra-emu-derive = { path = "../caliptra-sw/sw-emulator/lib/derive" }
# caliptra-emu-periph = { path = "../caliptra-sw/sw-emulator/lib/periph" }
# caliptra-emu-types = { path = "../caliptra-sw/sw-emulator/lib/types" }
# caliptra-error = { path = "../caliptra-sw/error", default-features = false }
# caliptra-hw-model = { path = "../caliptra-sw/hw-model" }
# caliptra-hw-model-types = { path = "../caliptra-sw/hw-model/types" }
# caliptra-image-crypto = { path = "../caliptra-sw/image/crypto", default-features = false, features = ["rustcrypto"] }
# caliptra-image-fake-keys = { path = "../caliptra-sw/image/fake-keys" }
# caliptra-image-gen = { path = "../caliptra-sw/image/gen" }
# caliptra-image-types = { path = "../caliptra-sw/image/types" }
# caliptra-registers = { path = "../caliptra-sw/registers" }
# caliptra-test = { path = "../caliptra-sw/test" }
# caliptra-test-harness-types = { path = "../caliptra-sw/test-harness/types" }
# ureg = { path = "../caliptra-sw/ureg" }
# dpe = { path = "../caliptra-sw/dpe/dpe", default-features = false, features = ["dpe_profile_p384_sha384"] }

# tock dependencies; keep git revs in sync
capsules-core = { git = "https://github.com/tock/tock.git", rev = "release-2.2" }
capsules-extra = { git = "https://github.com/tock/tock.git", rev = "release-2.2" }
capsules-system = { git = "https://github.com/tock/tock.git", rev = "release-2.2" }
components = { git = "https://github.com/tock/tock.git", rev = "release-2.2" }
kernel = { git = "https://github.com/tock/tock.git", rev = "release-2.2" , features = ["debug_load_processes"] }
riscv = { git = "https://github.com/tock/tock.git", rev = "release-2.2" }
riscv-csr = { git = "https://github.com/tock/tock.git", rev = "release-2.2" }
rv32i = { git = "https://github.com/tock/tock.git", rev = "release-2.2" }
tock-registers = { git = "https://github.com/tock/tock.git", rev = "release-2.2" }

# local Tock dependencies; if you use these, you also need to use local caliptra-sw and change its tock-registers to point at the same tock location
# capsules-core = { path = "../tock/capsules/core" }
# capsules-extra = { path = "../tock/capsules/extra" }
# capsules-system = { path = "../tock/capsules/system" }
# components = { path = "../tock/boards/components" }
# kernel = { path = "../tock/kernel" }
# riscv = { path = "../tock/arch/riscv" }
# riscv-csr = { path = "../tock/libraries/riscv-csr" }
# rv32i = { path = "../tock/arch/rv32i" }
# tock-registers = { path = "../tock/libraries/tock-register-interface" }



# Always optimize the emulator during tests, as it is a major bottleneck for
# test speed.
[profile.test]
opt-level = 3
lto = "thin"

[profile.release]
debug = true      # Keep debug symbols in the release ELF so that we can debug more easily.
lto = true
opt-level = "z"
codegen-units = 1

[patch.crates-io]
openssl = { git = "https://github.com/teythoon/rust-openssl.git", branch = "justus/pqc" } # MLDSA
