# Licensed under the Apache-2.0 license

[package]
name = "mcu-builder"
edition = "2021"

[dependencies]
anyhow.workspace = true
caliptra-auth-man-gen.workspace = true
caliptra-auth-man-types.workspace = true
caliptra-builder.workspace = true
caliptra-image-crypto.workspace = true
caliptra-image-fake-keys.workspace = true
caliptra-image-gen.workspace = true
caliptra-image-types.workspace = true
crc32fast.workspace = true
elf.workspace = true
emulator-consts.workspace = true
hex.workspace = true
mcu-config.workspace = true
mcu-config-emulator.workspace = true
semver.workspace = true
subst.workspace = true
tempfile.workspace = true
walkdir.workspace = true
zerocopy.workspace = true
