# Licensed under the Apache-2.0 license

[package]
name = "rom"
version.workspace = true
authors.workspace = true
edition.workspace = true

[target.'cfg(target_arch = "riscv32")'.dependencies]
riscv-csr = { git = "https://github.com/tock/tock.git", rev = "b128ae817b86706c8c4e39d27fae5c54b98659f1" }
rv32i = { git = "https://github.com/tock/tock.git", rev = "b128ae817b86706c8c4e39d27fae5c54b98659f1" }
