# Licensed under the Apache-2.0 license

[package]
name = "rom"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
registers-generated.workspace = true
romtime.workspace = true
tock-registers.workspace = true
zeroize.workspace = true

[target.'cfg(target_arch = "riscv32")'.dependencies]
riscv-csr.workspace = true
rv32i.workspace = true
