# Licensed under the Apache-2.0 license

[package]
name = "mcu-rom-common"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bitfield.workspace = true
caliptra-api.workspace = true
flash-image.workspace = true
mcu-config.workspace = true
registers-generated.workspace = true
romtime.workspace = true
smlang.workspace = true
tock-registers.workspace = true
zeroize.workspace = true
zerocopy.workspace = true

[target.'cfg(target_arch = "riscv32")'.dependencies]
riscv-csr.workspace = true
rv32i.workspace = true

[features]
default = [] # default is 2.0
hw-2-1 = []
core_test = []
