# Licensed under the Apache-2.0 license

[package]
name = "romtime"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
caliptra-api.workspace = true
caliptra-registers.workspace = true
registers-generated.workspace = true
tock-registers.workspace = true
ureg.workspace = true
zerocopy.workspace = true

[target.'cfg(target_arch = "riscv32")'.dependencies]
